--- a/config/boards/shields/zonkey /zonkey.dtsi
+++ b/config/boards/shields/zonkey /zonkey.dtsi
@@ -2,14 +2,9 @@
 
 / {
     chosen {
-        zmk,physical-layout = &zonkey_physical_layout;
+        zmk,kscan = &kscan0;
+        zmk,matrix_transform = &default_transform;
     };
-
-        zonkey_physical_layout: zonkey_physical_layout {
-        compatible = "zmk,physical-layout";
-        display-name = "Default";
-        transform = <&default_transform>;
-        kscan = <&kscan0>;
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
