--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,8 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: zonkey_R rgbled_adapter
+    shield: zonkey_R
   - board: seeeduino_xiao_ble
-    shield: zonkey_L rgbled_adapter
+    shield: zonkey_L
   - board: seeeduino_xiao_ble
     shield: settings_reset
